--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
+    "debug": "~4.3.4",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
-    "http-errors": "~1.6.3",
+    "http-errors": "~2.0.0",
     "jest": "^29.5.0",
     "mongodb-memory-server": "^8.13.0",
     "mongoose": "^7.3.0",
-    "morgan": "~1.9.1",
+    "morgan": "~1.10.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "nodemon": "^2.0.22",
     "supertest": "^6.3.3"
   },
