--- a/package.json
+++ b/package.json
@@ -23,15 +23,20 @@
     "mongoose": "^7.3.0",
     "morgan": "~1.10.0",
     "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
     "nodemon": "^2.0.22",
+    "passport-mock-strategy": "^2.0.0",
     "supertest": "^6.3.3"
   },
   "jest": {
     "verbose": true,
-    "clearMocks": true
+    "clearMocks": true,
+    "resetMocks": true,
+    "restoreMocks": true
   }
 }
